Fixed card alignment

--- a/src/app/recommendations/recommendations.component.css
+++ b/src/app/recommendations/recommendations.component.css
@@ -1,8 +1,9 @@
-.example-card {
-  max-width: 400px;
-}
-
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+img {
+  display: block;
+  max-width:230px;
+  max-height:150px;
+  width: auto;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto
 }
